--- a/index.html
+++ b/index.html
@@ -26,15 +26,75 @@
 <div class="collapse navbar-collapse" id="myNavbar">
 <ul class="nav navbar-nav">
 <li><a href="#home">Home</a></li>
-<li><a href="#life">School Life</a></li>
-<li><a href="#pledge">Pledge</a></li>
-<li><a href="#contact">Contact us</a></li>
-<li><a href="#logo">Our Logo and Crest</a></li>
+<li><a href="#studentachivement">Student Achivements</a></li>
+<li><a href="#logo">Our Logo</a></li>
+<li><a href="#contact">Contact Us</a></li>
 </ul>
 </div>
 
 </nav>
 <iframe id="video"src="https://www.youtube.com/embed/tAg7pU77E7U"></iframe>
-</body>
+<h2 class="page-header">Student Achivements</h2>
+<div class="bg-primary movie_head" data-toggle="collapse" data-target-="#Student Achivement1">North West Outstanding All Rounder Student Award 2022<i class="fa-fa-sort-desc"></i></div>
 
+<div id="school_achivement1"class="collapse">
+
+<div class="achievement_text">
+<img class="img-responsive img-thumbnail" src="https://beaconpri.moe.edu.sg/qql/slot/u744/2021/News/News/Achievements/Toh%20Si%20Man%20Maryse.jpg">
+<h5 class="text-success text-capitalize">Josiah Kee Songyi, our former student, who had graduated from the school in 2021, received the North West Outstanding All Rounder Student (OARS) Award. 
+<span class=""glyphicon glyphicon-star></span>
+<span class=""glyphicon glyphicon-star></span>
+<span class=""glyphicon glyphicon-star></span>
+<span class=""glyphicon glyphicon-star></span>
+<span class=""glyphicon glyphicon-star></span>
+<span class=""glyphicon glyphicon-star></span>
+<p>The OARS Award recognises students who have achieved community service, leadership and academic excellence.</p>
+</h5>
+</div>
+
+</div>
+<div class="bg-primary movie_head" data-toggle="collapse" data-target-="#Student Achivement2">NSG Bowling Competition<i class="fa-fa-sort-desc"></i></div>
+
+<div id="school_achivement2"class="collapse">
+
+<div class="achievement_text">
+<img class="img-responsive img-thumbnail" src="https://beaconpri.moe.edu.sg/qql/slot/u744/2021/News/News/Achievements/Josiah%20Kee%20NW%20CDC%20All%20Rounder.jpg">
+<h5 class="text-success text-capitalize">Toh Si Man Maryse, Class 5.5 
+<span class=""glyphicon glyphicon-star></span>
+<span class=""glyphicon glyphicon-star></span>
+<span class=""glyphicon glyphicon-star></span>
+<span class=""glyphicon glyphicon-star></span>
+<span class=""glyphicon glyphicon-star></span>
+<span class=""glyphicon glyphicon-star></span>
+</h5>
+</div>
+
+<h2 class="page-header" id="new">Our logo and crest</h2>
+
+<ul class="list-group">
+<li class="list-group-item list-group-item success col-lg-12 col-md-12 col-sm-12 col-xs-12 environment_li">
+<h4>The logo</h4>
+<img class="img-responsive col-lg-5 col-md-5 col-sm-5 col-xs-5" src="https://th.bing.com/th/id/R.260989c5b514590cb684eb050403a16b?rik=EcmV76spWGBMgw&riu=http%3a%2f%2fbeaconpri.moe.edu.sg%2fqql%2fslot%2fu744%2fstyle%2fhome%2flogo_home.png&ehk=Q0MQX%2fjiFU5trB4CXizJbNvyw5dDMGJH1hzEWYPfL84%3d&risl=&pid=ImgRaw&r=0">
+<p class="list-group-item-text col-lg-7 col-md-7 col-sm-7 col-xs-7">Our school logo in the shape of a shield symbolises our strength and our commitment in nurturing the whole child. The logo consists of a beacon with five brilliant rays in golden yellow serving as the guiding light. The rays signify our aspiration for every Beacon to be a Contributor, Connector, Constructor, Conductor and Confident learner.
+
+  Golden yellow, a colour for joy and creativity, depicts the school as a happy place to learn and work in and where innovation is part of the school culture. Royal blue represents space, openness and an environment that is engaging and conducive for learning.
+  
+  The globe in the background highlights vastness and possibilities in a global and connected world in which our learners expand their horizons and envision the future.
+  
+  The design also portrays the journey of a pathfinder charting new directions and striving to be a peak of excellence. It reinforces our aspiration for each Beacon to be a peak of excellence in his or her chosen areas. The school motto, "SHINE", at the base of the crest indicates that our pursuits are guided by our core values.</p>
+</li>
+</ul>
+<section id="contact">
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.654628502755!2d103.77267235707906!3d1.3838551076125456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da119f95353b3f%3A0x2ace29e4a4ecb8f6!2sBeacon%20Primary%20School!5e0!3m2!1sen!2ssg!4v1660828241746!5m2!1sen!2ssg" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<h3>Principal Name:</h3>
+<h4> Ms Pang Wee Mian</h4>
+<div class="contact_1">
+<a href="mailto:beaconprisch@moe.edu.sg?Subject:Hi"></a>
+<h5><i class="fa fa-envelope"></i>&nbsp;&nbsp;beaconprisch@moe.edu.sg</h5>
+  <a href="#"><h5><i class="fa fa-phone-square"></i>&nbsp;&nbsp;67697255</h5></a>
+
+
+</div>
+</section>
+</body>
 </html>
